--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -3,6 +3,7 @@ kind: Deployment
 metadata:
   name: webpage
 spec:
+  replicas: 1
   selector:
     matchLabels:
       app: webpage
@@ -28,3 +29,4 @@ spec:
   - port: 80
     targetPort: 80
   type: LoadBalancer
+
