--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,32 +1,45 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: webpage
+  name: nginx-test
+  labels:
+    app: nginx-test
 spec:
   replicas: 1
+  revisionHistoryLimit: 1
   selector:
     matchLabels:
-      app: webpage
+      app: nginx-test
   template:
     metadata:
       labels:
-        app: webpage
+        app: nginx-test
     spec:
       containers:
-      - name: webpage
-        image: fabricioveronez/pagina-exemplo:blue
+      - name: nginx
+        image: nginx:1.27
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 80
+        resources:
+          requests:
+            cpu: "50m"
+            memory: "64Mi"
+          limits:
+            cpu: "100m"
+            memory: "128Mi"
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: webpage
+  name: nginx-test
+  labels:
+    app: nginx-test
 spec:
+  type: ClusterIP
   selector:
-    app: webpage
+    app: nginx-test
   ports:
-  - port: 80
+  - name: http
+    port: 80
     targetPort: 80
-  type: LoadBalancer
-
