--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: webpage
+  namespace: webpage
 spec:
   replicas: 1
   selector:
@@ -29,3 +30,4 @@ spec:
   - port: 80
     targetPort: 80
   type: LoadBalancer
+
