--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -2,7 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: webpage
-  namespace: webpage
+  labels:
+    app: webpage
 spec:
   replicas: 1
   selector:
@@ -16,6 +17,7 @@ spec:
       containers:
       - name: webpage
         image: fabricioveronez/pagina-exemplo:blue
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 80
 ---
@@ -23,11 +25,16 @@ apiVersion: v1
 kind: Service
 metadata:
   name: webpage
+  labels:
+    app: webpage
 spec:
+  type: ClusterIP
   selector:
     app: webpage
   ports:
-  - port: 80
+  - name: http
+    port: 80
     targetPort: 80
-  type: LoadBalancer
+
+
 
