--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -17,7 +17,6 @@ spec:
       containers:
       - name: webpage
         image: fabricioveronez/pagina-exemplo:blue
-        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 80
 ---
@@ -32,6 +31,5 @@ spec:
   selector:
     app: webpage
   ports:
-  - name: http
-    port: 80
+  - port: 80
     targetPort: 80
